--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,16 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 body {
-  font-family: "Outfit", serif;
+  font-family: "Figtree", serif;
 }
 
 :root {
-  --figtree-font: "Figtree", serif;
+  --outfit-font: "Outfit", serif;
   --inter-font: "Inter", serif;
   --primaryColor: #6C36FE;
   --hover: #4825a7;
   --black: #473d65;
+  --black-2: #000000;
   --white: #ffffff;
   --pink: #f9f5ff;
   --border-color: var(--color-pink-300);
@@ -21,7 +22,11 @@ body {
   --gray-2: #414651;
   --gray-3: #535862;
   --gray-4: #D5D7DA;
-  --dark: #000000;
+  --gray-5: #E6E6E6;
+  
+  --dark: #171717;
+  --dark-theme: #0d0d0d;
+  --light: #f2f2f2;
 }
 
 /* backgrounds */
@@ -36,6 +41,7 @@ body {
 .text-root-color {
   color: var(--primaryColor);
 }
+
 .text-color {
   color: var(--black);
 }
@@ -48,8 +54,11 @@ body {
 .gray-3 {
   color: var(--gray-3);
 }
-.dark {
-  color: var(--dark);
+.gray-5 {
+  color: var(--gray-5);
+}
+.black-2 {
+  color: var(--black-2);
 }
 
 /* hover */
@@ -60,7 +69,9 @@ body {
   background-color: var(--primaryColor);
   color: var(--white);
 }
-
+.error-border {
+  border-color: #EF4444 ; 
+}
 .bg-hover:hover {
   background-color: var(--hover);
   color: var(--white);
@@ -70,8 +81,8 @@ body {
 .font-inter {
   font-family: var(--inter-font);
 }
-.font-figtree {
-  font-family: var(--figtree-font);
+.font-outfit {
+  font-family: var(--outfit-font);
 }
 
 /* border */
@@ -117,4 +128,19 @@ body {
 }
 .Toastify__close-button:focus {
   color: #4d2eff !important;
+}
+
+.captcha-container {
+  transform: scale(1); 
+}
+
+@media (max-width: 340px) {
+  .captcha-container {
+    transform: scale(0.8); 
+  }
+}
+@media (max-width: 280px) {
+  .captcha-container {
+    transform: scale(0.6); 
+  }
 }
